--- a/_sass/_navigation/base.scss
+++ b/_sass/_navigation/base.scss
@@ -6,7 +6,7 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-@media only screen and (max-width: 40em) {
+@media only screen and (max-width: 768px) {
     #header {
         position: relative;
     }
